--- a/index.html
+++ b/index.html
@@ -38,19 +38,13 @@
         <div class="logo">Logo</div>
         <ul>
           <li>
-            <a href="#section1"> section1 </a>
+            <a href="#analysis"> Analysis </a>
           </li>
           <li>
-            <a href="#section2"> section2 </a>
+            <a href="#design-process"> Design Process </a>
           </li>
           <li>
-            <a href="#section3"> section3 </a>
-          </li>
-          <li>
-            <a href="#section4"> section4 </a>
-          </li>
-          <li>
-            <a href="#section5"> section5 </a>
+            <a href="#Landscape-design-and-visual"> Landscape design and visual </a>
           </li>
         </ul>
       </nav>
@@ -79,7 +73,7 @@
           consectetur rem?
         </p>
       </section>
-      <section>
+      <section id="analysis">
         <h2>site analysis</h2>
           <div class="image-container">
             <img class="view" src="./assets/images/hero.jpeg" />
@@ -122,7 +116,7 @@
           </p>
 
       </section>
-      <section>
+      <section id="design-process">
         <h2>elements of programs</h2>
           <div class="image-container">
             <img class="view" src="./assets/images/hero.jpeg" />
@@ -187,7 +181,7 @@
           </p>
 
       </section>
-      <section>
+      <section id="Landscape-design-and-visual">
         <h2>Landscape</h2>
           <div class="image-container">
             <img class="view" src="./assets/images/hero.jpeg" />
@@ -269,7 +263,8 @@
     <section class="team-members container">
       <h2>team members</h2>
       <div class="team-members-container">
-        <div class="member">
+        <div class="member-container">
+          <div class="member">
           <img src="./assets/images/person.jpg"/>
           <h3>john doe</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio culpa porro vero, ad eius corporis alias omnis.</p>
@@ -281,7 +276,9 @@
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="30px" width="30px" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"></path></svg>              </a>
           </div>
         </div>
-        <div class="member">
+        </div>
+        <div class="member-container">
+          <div class="member">
           <img src="./assets/images/person.jpg"/>
           <h3>john doe</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio culpa porro vero, ad eius corporis alias omnis.</p>
@@ -293,7 +290,9 @@
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="30px" width="30px" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"></path></svg>              </a>
           </div>
         </div>
-        <div class="member">
+        </div>
+        <div class="member-container">
+          <div class="member">
           <img src="./assets/images/person.jpg"/>
           <h3>john doe</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio culpa porro vero, ad eius corporis alias omnis.</p>
@@ -305,7 +304,7 @@
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="30px" width="30px" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"></path></svg>              </a>
           </div>
         </div>
-      <div>
+        </div>
     </section>
   </body>
   <script src="./assets/js/imageViewer.js"></script>
