--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </p>
 
       </section>
-      <!-- <section>
+  <section>
         <h2>Render Shots</h2>
         <div class="image-container">
           <div
@@ -258,7 +258,7 @@
           ratione tempore blanditiis sunt accusantium iste odit neque. Eos,
           temporibus doloremque?
         </p>
-      </section> -->
+      </section>
     </main>
     <section class="team-members container">
       <h2>team members</h2>
